@@ -1,3 +1,8 @@
+Fri Aug 21 15:14:40 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* eval.c (rb_yield_0): to be written.
+	* parse.y (block_var): now treats as if blocks are functions.
+
 Fri Aug 21 00:39:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* parse.y (opt_call_args): fix to pass "make test-all".
